refactor: move folders and change location path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="/src/assets/images/favicon.png" rel="icon" type="image/png" />
+    <link
+      href="/src/shared/assets/images/favicon.png"
+      rel="icon"
+      type="image/png"
+    />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
